--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "Moovit": "Embark",
-  "name": "Embark Ticket",
+  "name": "Moovit",
   "icons": [
     {
-      "src": "embarklogo.png",
+      "src": "moovitlogo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "embarklogo.png",
+      "src": "moovitlogo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
