--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,17 @@
       "src": "moovitlogo.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "maskable any"
     },
     {
       "src": "moovitlogo.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "maskable any"
     }
   ],
   "start_url": "./index.html",
-  "background_color": "#ffffff",
+  "background_color": "#ff6d00",
   "display": "standalone",
-  "theme_color": "#ffffff"
+  "theme_color": "#ff6d00"
 }
