--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     }
   ],
   "start_url": "./index.html",
-  "background_color": "#ff6d00",
+  "background_color": "#ffffff",
   "display": "standalone",
-  "theme_color": "#ff6d00"
+  "theme_color": "#ffffff"
 }
